# waylandcraft-extended

./: README.md  build.gradle  deploy-modrinth.sh  gradle.properties
native/: Cargo.toml
native/src/: bridge.rs  egl.rs  input_trace.rs  lib.rs  process.rs  seat.rs  x11_probe.rs  xdg_spec.rs
scripts/: analyze-input-trace.sh
src/main/java/dev/evvie/waylandcraft/: RenderUtils.java  WaylandCraft.java  WaylandCraftUtils.java  WindowDisplay.java  XDGDesktopManager.java
src/main/java/dev/evvie/waylandcraft/bridge/: IconSurface.java  WLCSurface.java  WLCToplevel.java  WLCX11Window.java  WaylandCraftBridge.java
src/main/java/dev/evvie/waylandcraft/debug/: InputTrace.java  TextureDebug.java
src/main/java/dev/evvie/waylandcraft/desktop/: AppLaunchProfile.java  DesktopIcon.java  DesktopLayout.java  DesktopManager.java  DesktopNotification.java  DesktopPanel.java  DesktopWorkspace.java  PinnedApp.java  WindowIcon.java  XDGDesktopManager.java
src/main/java/dev/evvie/waylandcraft/grabs/: DesktopPanelMoveGrab.java  MonitorClientResizeGrab.java  MonitorMoveGrab.java  MonitorResizeGrab.java  MonitorRotationGrab.java  MoveGrab.java  PointerGrab.java  PointerGrabMap.java  WindowGrab.java
src/main/java/dev/evvie/waylandcraft/gui/: AppLauncherScreen.java  AppListWidget.java  AppWidget.java  CategorySelectorWidget.java  SelectorWidget.java  ShortcutHelpScreen.java  WaylandHudRenderer.java  (+1 more)
src/main/resources/: fabric.mod.json  waylandcraft.mixins.json
src/main/resources/assets/waylandcraft/lang/: en_us.json
src/main/resources/assets/waylandcraft/shaders/: window_opaque.fsh
(+26 files in other folders)
