[package]
name = "waylandcraft"
version = "0.1.0"
edition = "2024"

[lib]
name = "waylandcraft"
crate-type = [ "cdylib" ]

[dependencies]
smithay = { path = "../vendor/smithay", default-features = false, features = [ "wayland_frontend", "backend_drm", "xwayland" ] }
jni = "0.21.1"
libc = { version = "0.2.176", default-features = false }
xkbcommon = "0.8.0"
cosmic-freedesktop-icons = { git = "https://github.com/pop-os/freedesktop-icons.git", rev = "7a61a70" }
freedesktop-desktop-entry = "0.8.1"
resvg = { version = "0.47.0", default-features = false, features = ["text", "memmap-fonts"] }
shlex = "1.3.0"
x11rb = { version = "0.13.2", features = ["record"] }
